--- a/src/main/resources/edu/kou/yazLab2/main.fxml
+++ b/src/main/resources/edu/kou/yazLab2/main.fxml
@@ -6,7 +6,7 @@
 
 <HBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="edu.kou.yazLab2.MainController">
+      fx:controller="edu.kou.yazLab2.MainController"
       spacing="10"
       alignment="CENTER"
       prefWidth="1500"
